Migrate pike/master to stable/dev build streams
The use of pike/master naming when building StarlingX docker images
does not properly reflect the differences in how images are built,
resulting in some confusion for developers. Partly to address this,
and to allow for independence between images, this is being migrated
to use stable/dev build streams.

The stable build stream uses a base image (ie. stx-centos) that has
software repo configuration that points to StarlingX build output as a
source for software package installation. Images that use an upstream
repo as the main project code would generally use a stable branch for
this build stream, as well. For example, once Openstack Stein is
released, the stable builds for StarlingX Openstack services will be
updated to build from a stable/stein branch.

The dev build stream uses only upstream sources for software
installation, with images building from upstream master branches,
generally.

The stx-libvirt image, for example, is built solely from StarlingX
build output, and is therefore built in the stable build stream.

An image lineup for the stx-openstack application could therefore be a
mixture of stable and dev build stream images. The "stable"
application lineup (once we have Stein) would be all stable build
stream images, while the "dev" lineup would be dev build stream images
plus stable images for any that are stable-only (such as stx-libvirt).

To roll out these changes without impacting designers or builds, the
pike/master builds will still be supported for a short period.

This update provides the tool and base configuration changes to
support the introduction of the stable/dev build streams.

Change-Id: Ib5dc9a7c1d8c37368d073e28d83eeb883766ee3f
Story: 2005248
Task: 30098
Signed-off-by: Don Penney <don.penney@windriver.com>

--- a/build-tools/build-docker-images/README
+++ b/build-tools/build-docker-images/README
@@ -5,7 +5,7 @@ PRIVATE_REGISTRY=xxx.xxx.xxx.xxx:9001
 VERSION=2018.11.13
 OS=centos
 OS_VERSION=7.5.1804
-OPENSTACK_RELEASE=pike
+BUILD_STREAM=stable
 HOST_PORT=8088
 
 ## Step 1: Build stx-centos
@@ -25,15 +25,15 @@ time $MY_REPO/build-tools/build-docker-images/build-stx-base.sh \
 time $MY_REPO/build-tools/build-wheels/build-wheel-tarball.sh \
     --os ${OS} \
     --os-version ${OS_VERSION} \
-    --release ${OPENSTACK_RELEASE}
+    --stream ${BUILD_STREAM}
 
 ## Step 3: Build images
 time $MY_REPO/build-tools/build-docker-images/build-stx-images.sh \
     --os ${OS} \
     --version ${VERSION} \
-    --release ${OPENSTACK_RELEASE} \
+    --stream ${BUILD_STREAM} \
     --base ${PRIVATE_REGISTRY}/${PRIVATE_REGISTRY_USERID}/stx-${OS}:${VERSION} \
-    --wheels http://${HOSTNAME}:${HOST_PORT}/${MY_WORKSPACE}/std/build-wheels-${OS}-${OPENSTACK_RELEASE}/stx-${OS}-${OPENSTACK_RELEASE}-wheels.tar \
+    --wheels http://${HOSTNAME}:${HOST_PORT}/${MY_WORKSPACE}/std/build-wheels-${OS}-${BUILD_STREAM}/stx-${OS}-${OPENSTACK_RELEASE}-wheels.tar \
     --user ${PRIVATE_REGISTRY_USERID} \
     --registry ${PRIVATE_REGISTRY} \
     --push --latest \
