Update wheels and build tool
This update includes two changes:
* Due to timing of reviews of two recent commits, changes in the
  second commit impacted the first, renaming a variable used in
  new code introduced by the first commit. The second commit merged
  soon after, leaving the new code using the now wrong variable.
  This update corrects the new code, replacing the new uses of
  OPENSTACK_RELEASE with BUILD_STREAM in the image build tool.
* The new stx-fm-rest-api image installs some openstack modules, and
  builds in the stable build stream. This means we now need the
  stable-wheels.cfg to be a copy of the pike-wheels.cfg, until
  Stein is released. This update copies pike-wheels.cfg to the new file.

Change-Id: I538bae32a68e43d07e5c64ead8e2884204509194
Story: 2005248
Task: 30151
Signed-off-by: Don Penney <don.penney@windriver.com>

--- a/build-tools/build-docker-images/README
+++ b/build-tools/build-docker-images/README
@@ -33,7 +33,7 @@ time $MY_REPO/build-tools/build-docker-images/build-stx-images.sh \
     --version ${VERSION} \
     --stream ${BUILD_STREAM} \
     --base ${PRIVATE_REGISTRY}/${PRIVATE_REGISTRY_USERID}/stx-${OS}:${VERSION} \
-    --wheels http://${HOSTNAME}:${HOST_PORT}/${MY_WORKSPACE}/std/build-wheels-${OS}-${BUILD_STREAM}/stx-${OS}-${OPENSTACK_RELEASE}-wheels.tar \
+    --wheels http://${HOSTNAME}:${HOST_PORT}/${MY_WORKSPACE}/std/build-wheels-${OS}-${BUILD_STREAM}/stx-${OS}-${BUILD_STREAM}-wheels.tar \
     --user ${PRIVATE_REGISTRY_USERID} \
     --registry ${PRIVATE_REGISTRY} \
     --push --latest \
